[gd_scene load_steps=9 format=3 uid="uid://c00g2f6cs2qmv"]

[ext_resource type="Script" path="res://main.gd" id="1_xa3r1"]
[ext_resource type="FontFile" uid="uid://gib0aims4g01" path="res://UI/Montserrat-ExtraLight.ttf" id="3_767k1"]
[ext_resource type="FontFile" uid="uid://chf1tjsfaljv1" path="res://UI/Montserrat-Light.ttf" id="4_wha4k"]
[ext_resource type="StyleBox" uid="uid://ba4mr84gjn7wp" path="res://UI/button_style_box.tres" id="5_rcemy"]
[ext_resource type="FontFile" uid="uid://d4likbmimanq1" path="res://UI/Montserrat-Regular.ttf" id="5_relgm"]
[ext_resource type="AudioStream" uid="uid://ddm80akvts4ap" path="res://Music/Boble2_Master.mp3" id="6_negab"]
[ext_resource type="AudioStream" uid="uid://d1ic2ac44e4xw" path="res://Music/gameover_boble2.mp3" id="7_dycg2"]
[ext_resource type="AudioStream" uid="uid://dskuh47eouda0" path="res://Music/vinnermusikk.mp3" id="8_dhvuo"]

[node name="Main" type="Node2D"]
script = ExtResource("1_xa3r1")

[node name="StartMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="StartMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -294.0
offset_top = 212.345
offset_right = 294.0
offset_bottom = 442.345
grow_horizontal = 2

[node name="Title" type="Label" parent="StartMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_767k1")
theme_override_font_sizes/font_size = 80
text = "pet the bubble"
horizontal_alignment = 1
vertical_alignment = 1

[node name="note" type="Label" parent="StartMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_relgm")
theme_override_font_sizes/font_size = 28
text = "a friend making game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="StartMenu/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 28

[node name="StartButton" type="Button" parent="StartMenu/VBoxContainer"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.277528, 0.277528, 0.277528, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_wha4k")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("5_rcemy")
text = "NEW GAME"

[node name="HSeparator" type="HSeparator" parent="StartMenu/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 2

[node name="QuitButton" type="Button" parent="StartMenu/VBoxContainer"]
custom_minimum_size = Vector2(260, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.277528, 0.277528, 0.277528, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_wha4k")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("5_rcemy")
text = "QUIT"

[node name="HSeparator3" type="HSeparator" parent="StartMenu/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 112

[node name="ResultsMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="ResultsMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -263.0
offset_top = 99.585
offset_right = 263.0
offset_bottom = 609.585
grow_horizontal = 2

[node name="ResultTitle" type="Label" parent="ResultsMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_767k1")
theme_override_font_sizes/font_size = 80
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="ResultsMenu/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="MessageLabel" type="Label" parent="ResultsMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_relgm")
theme_override_font_sizes/font_size = 24
text = "Sometimes too much love can add a lot of pressure. Enough to make someone pop.
"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator3" type="HSeparator" parent="ResultsMenu/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 40

[node name="FriendScoreLabel" type="Label" parent="ResultsMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_relgm")
theme_override_font_sizes/font_size = 24
text = "Friend score:"
horizontal_alignment = 1

[node name="FoodScoreLabel" type="Label" parent="ResultsMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_relgm")
theme_override_font_sizes/font_size = 24
text = "Foods ate:"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="ResultsMenu/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 32

[node name="TryAgainButton" type="Button" parent="ResultsMenu/VBoxContainer"]
custom_minimum_size = Vector2(260, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.277528, 0.277528, 0.277528, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_wha4k")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("5_rcemy")
text = "TRY AGAIN"

[node name="HSeparator4" type="HSeparator" parent="ResultsMenu/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 3

[node name="MainMenuButton" type="Button" parent="ResultsMenu/VBoxContainer"]
custom_minimum_size = Vector2(260, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.277528, 0.277528, 0.277528, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_wha4k")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("5_rcemy")
text = "BACK"

[node name="BobleMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_negab")

[node name="GameoverMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_dycg2")

[node name="VictoryMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_dhvuo")

[node name="BackgroundLayer" type="CanvasLayer" parent="."]

[node name="EffectsLayer" type="CanvasLayer" parent="."]

[connection signal="pressed" from="StartMenu/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="StartMenu/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="ResultsMenu/VBoxContainer/TryAgainButton" to="." method="_on_try_again_button_pressed"]
[connection signal="pressed" from="ResultsMenu/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
